# acurve

./: .gitignore  .sops.yaml  docker-compose.yaml  setup.md
.claude/: settings.local.json
.github/workflows/: build.yaml
deploy/: README.md
deploy/base/: helmrelease.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  secrets.sops.yaml
deploy/flux/: helmrepository-bjw-s.yaml  kustomization-acurve.yaml
migrations/: 001_init.sql
orchestrator/: Dockerfile  go.mod
orchestrator/cmd/acurve/: main.go
orchestrator/internal/api/: server.go  sources.go
orchestrator/internal/dashboard/: handler.go
orchestrator/internal/dashboard/templates/: index.html  sources_table.html
orchestrator/internal/db/: db.go  digest.go  sources.go
orchestrator/internal/digest/: compose.go
orchestrator/internal/discord/: webhook.go
scraper/: Dockerfile  pyproject.toml
scraper/acurve_scraper/: __main__.py  config.py  db.py
scraper/acurve_scraper/sources/: reddit.py  rss.py  youtube.py
summarizer/: Dockerfile  pyproject.toml
summarizer/acurve_summarizer/: __main__.py  db.py  llm.py
