[project]
name = "acurve-scraper"
version = "0.1.0"
description = "acurve scraper — fetches RSS, YouTube, and Reddit items into Postgres"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0",
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "structlog>=24.0",
    "youtube-transcript-api>=0.6",
    "praw>=7.8",
]

[project.scripts]
acurve-scraper = "acurve_scraper.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"
